--- a/BlazorTool.Client/Pages/Settings.razor
+++ b/BlazorTool.Client/Pages/Settings.razor
@@ -2,7 +2,7 @@
 @inject BlazorTool.Client.Services.ApiServiceClient apiService
 
 <h3>Settings</h3>
-user=@currentUser
+<p class="active">user=@currentUser</p>
 <div class="container">
     <div class="row mb-3">
         <div class="col-md-6">
